# OpenCV_HW1

./: .gitignore  main.py  makefile  pyproject.toml
