[tool.poetry]
name = "opencv-hw"
version = "0.1.0"
description = ""
authors = ["miohitokiri5474 <lltzpp>"]
readme = "README.md"
packages = [{include = "opencv_hw"}]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.1.78"
scipy = [
    {version = "<=3.9", python = ">=3.9,<3.13"},
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
